# fastAPIdemo

./: README.md  coronavirus.sqlite3  hello_world.py  pydantic_tutorial.json  pydantic_tutorial.py  pyproject.toml  run.py
coronavirus/: __init__.py  crud.py  database.py  main.py  models.py  schemas.py
tutorial/: __init__.py  chapter03.py  chapter04.py  chapter05.py  chapter06.py  chapter07.py  chapter08.py  test_chapter08.py
