[tool.poetry]
name = "fastapidemo"
version = "0.1.0"
description = ""
authors = ["dison <709142365@qq.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
pydantic = "^1.10.2"
SQLAlchemy = "^1.4.45"
email-validator = "^1.3.0"
python-multipart = "^0.0.5"
passlib = "^1.7.4"
jose = "^1.0.0"
python-jose = "^3.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
